# ngafalinfy

./: .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
alembic/: env.py
alembic/versions/: 0d7de7a64237_add_reviewlogtable.py  74674a1ad22f_update_card_table.py  8377b331e00f_add_card_table.py  8c5d50efe770_update_user_table.py  bc90df2d2caa_user_add_oauth_fields.py  c603403faee6_refresh_table.py
docker/db/: my.cnf
src/: __init__.py  config.py  main.py
src/api/composition/: auth.py  auth_google.py  card.py  checkhealth.py  deck.py  user.py
src/api/error_schema/: common.py
src/api/log/: __init__.py  logger.py  logger_config.yaml
src/api/middleware/: error_handling_middleware.py  router_logging_middleware.py
src/api/router/: __init__.py  auth_google.py  cards.py  checkhealth.py  decks.py
src/domain/error/: base.py
src/domain/model/: auth.py  common.py  health.py
src/domain/model/card/: card.py  card_exception.py
src/domain/model/deck/: deck.py  deck_exception.py
src/domain/model/user/: user.py
src/domain/ports/: token.py
src/domain/repository/: card.py  deck.py  user.py
src/infrastructure/db/: __init__.py
src/infrastructure/db/card/: card_dto.py  card_query_service.py  card_repository.py  card_repository_usecase.py  card_table.py
src/infrastructure/db/deck/: deck_dto.py  deck_query_service.py  deck_repository.py  deck_repository_usecase.py  deck_table.py
src/infrastructure/db/review_log/: review_log_table.py
src/infrastructure/db/user/: user_dto.py  user_query_service.py  user_table.py  (+2 more)
src/infrastructure/security/: jwt.py  oauth_google.py  token_decoder.py
src/usecase/auth/: auth_usecase.py
src/usecase/card/: card_readable_service.py  card_readable_usecase.py  card_schema.py  card_writeable_usecase.py
src/usecase/deck/: deck_readable_service.py  deck_readable_usecase.py  deck_schema.py  deck_writeable_usecase.py
src/usecase/user/: user_readable_service.py  user_readable_usecase.py  user_schema.py  user_writeable_usecase.py
tests/: conftest.py  test_cards.py  test_decks.py
